[package]
name = "ssh-parser"
version = "0.1.2"
authors = ["Nicolas Vivet <nicolas@nzx.io>"]
description = "Parser for the SSH protocol"
license = "LGPL-2.1+"
homepage = "https://github.com/copslock/ssh-parser"
repository = "https://github.com/copslock/ssh-parser"
documentation = "https://docs.rs/ssh-parser"

[features]
integers = ["num-bigint", "num-traits"]
serialize = ["cookie-factory"]

[dependencies]
enum_primitive = "0.1"
nom = "^3.0"
rusticata-macros = "1.0.0"

cookie-factory = { version = "0.2", optional = true }
num-bigint = { version = "0.1", optional = true }
num-traits = { version = "0.1", optional = true }
